# Dino_Game

./: CMakeLists.txt  README.md
Finished_Game_for_single_player/Header_Files/: Obstacles.h  Score.h  stdafx.h
Finished_Game_for_single_player/Source_Files/: Clouds.cpp  Dino.cpp  Floor.cpp  Game.cpp  Obstacles.cpp  Score.cpp  Tile.cpp  main.cpp
Header_Files/: Clouds.h  Collision.h  Dino.h  Floor.h  Game.h  Tile.h
Source_Files/: Dino.cpp  Game.cpp
